added footer with links

--- a/index.html
+++ b/index.html
@@ -627,7 +627,14 @@
 
                            
             </div>
-        <footer> coded by Paola Milanes</footer>
+         <footer id = "footer"> 
+            coded by
+                    <a href="https://github.com/paola-milanes" id="gitHubLink"target="_blank">Paola Milanes </a>
+            code hosted on 
+                    <a href="https://github.com/paola-milanes/vanilla-weatherapp0" id="appLink"> GitHub</a>
+            and website hosted on 
+                    <a href="world-clock-check.netlify.app" id="netlifyLink"> Netlify</a>
+        </footer>
         </div>
     </div>
     <script src="script.js"></script>
